@@ -97,6 +97,10 @@ FIXED:
 
 SECURITY:
 
+  * The "openid_connect" authentication type would previously pull
+    authentication information from a context that could be altered by
+    individual courses.
+
 ACCESSIBILITY:
 
   * Changed "radio" and "checkbox" multiplechoice variants to use fieldsets and
